# solray

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.config/: panache.toml  rumdl.toml
.github/workflows/: release.yaml  test.yaml
docs/: project-guidelines.md
fixtures/abstracts/expected/: output.txt
fixtures/abstracts/src/: AbstractOnly.sol  Mixed.sol
fixtures/abstracts/test/: TestAbstract.sol
fixtures/asset-transfers/expected/: output.txt
fixtures/asset-transfers/src/: ERC20TransferBase.sol  ERC20TransferFromBase.sol  ERC20TransferFromTest.sol  ERC20TransferTest.sol  ETHTransfer.sol  IERC20.sol  (+1 more)
fixtures/call-path/: foundry.toml
fixtures/erc20-transfer-sinks/: foundry.toml
fixtures/external-functions/: foundry.toml
fixtures/inspect-contracts/: foundry.toml
fixtures/inspect-contracts-no-ast/: foundry.toml
fixtures/libraries/: foundry.toml
fixtures/storages/: foundry.toml
src/: artifact_index.rs  build_info.rs  call_graph.rs  callgraph.rs  entrypoints.rs  function_index.rs  inheritance.rs  inheritance_resolver.rs  lib.rs  main.rs  project.rs  source_graph.rs  storage_layout.rs  symbol_index.rs
src/call_graph/: function_id.rs  function_index.rs  loader.rs  mod.rs  node.rs  resolved_call_graph.rs  resolver.rs
src/commands/: abstracts.rs  calls.rs  contracts.rs  entrypoints.rs  inheritances.rs  interfaces.rs  libraries.rs  mod.rs  sources.rs  storages.rs
src/inspectors/: abstract.rs  artifact_id.rs  contract.rs  external_function.rs  inheritance_graph.rs  interface.rs  library.rs  mod.rs  modifier.rs  storage_layout.rs
src/project/: mod.rs
src/scanners/: asset_transfers.rs  erc20_transfer_sink.rs  mod.rs
(+148 files in other folders)
