[package]
name = "solray"
version = "0.1.0"
edition = "2024"

[dependencies]
# Error handling
anyhow = "1.0.100"

# CLI
clap = { version="4.5.54", features = ["derive"] }

# Logging & Tracing
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Solidity compiler bindings
solc = "0.0.11"

# JSON & TOML
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "1.1.2"

# Parallel processing
rayon = "1.12"

# Path traversal
walkdir = "2"
